[package]
name = "arrise"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Serialise structured data into const-sized arrays."
documentation = "https://docs.rs/arrise"
categories = ["no-std", "no-std::no-alloc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
primitive_le = []
primitive_be = []
large_tuples = []
atomic_int_128 = []
std = []

[dependencies.split_array]
version = "0.2.0"

[dependencies.arrise_macro]
#git = "https://github.com/melvdlin/arrise-macro.git"
path = "../arrise-macro"
